Revised savefig process
First version had some blank saved images. Correction: plt.show() has to be after plt.savefig() in order to save the image, as plt.show() will clear the output.
The subplot was not impacted, unless plt.show() was used while not necessary.

--- a/DSNP_CRISP_Boston.ipynb
+++ b/DSNP_CRISP_Boston.ipynb
@@ -3535,7 +3535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -3548,15 +3548,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -3577,13 +3568,14 @@
     "plt.xlabel(\"Longitude\")\n",
     "plt.ylabel(\"Latude\")\n",
     "#plt.annotate('Allston', xy=(42.352, -71.135), xytext=(1, 2) )\n",
-    "plt.show() \n",
-    "plt.savefig('topneighborhood.png')"
+    "\n",
+    "plt.savefig('topneighborhood.png')\n",
+    "plt.show() # to save image, plt.show() needs to be after plt.savefig\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -3623,13 +3615,13 @@
     "ax2.set_title('Distribution of listing by property - Top 5 neighborboods')\n",
     "ax2.bar( 'property_type_grouped', 'total_listings' , data =propertydist_top, color = 'blue' , width = width)\n",
     "\n",
-    "\n",
-    "plt.savefig('property.png')"
+    "plt.savefig('property.png')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -3668,13 +3660,13 @@
     "ax2.set_title('Distribution of listing by accommodate - Top 5 neighborboods')\n",
     "ax2.bar( 'accommodates_cleansed', 'total_listings' , data =accommodatedist_top, color = 'blue' , width = width)\n",
     "\n",
-    "\n",
-    "plt.savefig('accommodate.png')\n"
+    "plt.savefig('accommodate.png')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -3713,8 +3705,8 @@
     "ax2.set_title('Distribution of listing by property_type for accommodate for 4+ g - Top 5 nroupeighborboods')\n",
     "ax2.bar( 'property_type_grouped', 'total_listings' , data =accommodatedist_g4_top, color = 'blue' , width = width)\n",
     "\n",
-    "\n",
-    "plt.savefig('accommodate_g4.png')"
+    "plt.savefig('accommodate_g4.png')\n",
+    "plt.show()"
    ]
   },
   {
@@ -4016,7 +4008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -4031,15 +4023,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4093,13 +4076,14 @@
     "plt.plot('date', 'available_rate' , data = ava_dist_Charlestown, color = 'yellow', label = 'Charlestown'  )\n",
     "\n",
     "plt.legend(loc = \"upper left\") \n",
-    "plt.show()\n",
-    "plt.savefig('Availablilty by date and neighborhood.png')\n"
+    "\n",
+    "plt.savefig('Availablilty by date and neighborhood.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -4114,15 +4098,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4182,8 +4157,9 @@
     "plt.plot('weekday', 'available_rate' , data = ava_dist_weekday_Charlestown, color = 'yellow', label = 'Charlestown'  )\n",
     "\n",
     "plt.legend(loc= \"upper right\") \n",
-    "plt.show()\n",
-    "plt.savefig('Availablilty by weekday.png')"
+    "\n",
+    "plt.savefig('Availablilty by weekday.png')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -4200,7 +4176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4213,15 +4189,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4237,13 +4204,13 @@
     "plt.ylabel(\"Average Price\") \n",
     "plt.axis((df_calendar_avgprice['date'].min(), df_calendar_avgprice['date'].max(),df_calendar_avgprice[df_calendar_avgprice['price_cleansed'].notnull()]['price_cleansed'].min(),df_calendar_avgprice[df_calendar_avgprice['price_cleansed'].notnull()]['price_cleansed'].max()+10))\n",
     " \n",
-    "plt.show()\n",
-    "plt.savefig('Average Price by date.png')"
+    "plt.savefig('Average Price by date.png')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4256,15 +4223,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4279,13 +4237,13 @@
     "plt.xlabel(\"Weekday\")\n",
     "plt.ylabel(\"Average Price\") \n",
     "  \n",
-    "plt.show()\n",
-    "plt.savefig('Average Price by weekday.png')"
+    "plt.savefig('Average Price by weekday.png')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -4298,15 +4256,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4332,8 +4281,9 @@
     "ax2.set_xlabel(\"Neighbourhood\")\n",
     "ax2.set_ylabel(\"Average Price\") \n",
     "ax2.set_ylim([0,350])\n",
-    "plt.show()\n",
-    "plt.savefig('Average Price by neighbourhood.png')\n"
+    "\n",
+    "plt.savefig('Average Price by neighbourhood.png')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -4391,7 +4341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -4404,15 +4354,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4427,13 +4368,13 @@
     "plt.xlabel(\"Review_rating_score\")\n",
     "plt.ylabel(\"Average Price\") \n",
     "  \n",
-    "plt.show()\n",
-    "plt.savefig('Average Price by review rating.png')"
+    "plt.savefig('Average Price by review rating.png')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -4446,15 +4387,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4469,8 +4401,8 @@
     "plt.xlabel(\"accommodates_cleansed\")\n",
     "plt.ylabel(\"Average Price\") \n",
     "  \n",
-    "plt.show()\n",
-    "plt.savefig('Average Price by accommodates_cleansed.png') "
+    "plt.savefig('Average Price by accommodates_cleansed.png') \n",
+    "plt.show()\n"
    ]
   },
   {
